import 'package:flutter/material.dart';
import 'package:offline_tube/video_player/video_player_viewmodel.dart';
import 'package:stacked/stacked.dart';

class DownloadButton extends ViewModelWidget<VideoPlayerViewModel> {
  const DownloadButton({super.key});

  @override
  Widget build(BuildContext context, VideoPlayerViewModel viewModel) {
    return Material(
      color: Colors.black,
      borderRadius: BorderRadius.circular(12),
      child: InkWell(
        onTap: () async {
          if (viewModel.isDownloaded) return;
          await viewModel.handleDownload();
        },
        borderRadius: BorderRadius.circular(12),
        child: Container(
          width: MediaQuery.of(context).size.width * 0.9,
          padding: const EdgeInsets.symmetric(vertical: 12),
          child: Row(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              if (viewModel.isDownloading)
                const SizedBox(
                  width: 24,
                  height: 24,
                  child: CircularProgressIndicator(
                    strokeWidth: 2,
                    color: Colors.white,
                  ),
                )
              else ...[
                Text(
                  viewModel.isDownloaded ? 'Added to downloads' : 'Download',
                  style: const TextStyle(
                    color: Colors.white,
                    fontWeight: FontWeight.w600,
                  ),
                ),
                const SizedBox(width: 8),
                Icon(
                  viewModel.isDownloaded ? Icons.check : Icons.download_rounded,
                  color: Colors.white,
                  size: 20,
                ),
              ],
            ],
          ),
        ),
      ),
    );
  }
}
