...

      isDownloaded = true;
      isDownloading = false;
      notifyListeners();
    } catch (e) {
      downloadsService.remove(video.video.id.value);
      showSnackBar(text: 'Download failed');
      isDownloading = false;
      notifyListeners();
      rethrow;
    }
  }

...
